# RRS

./: .gitignore  README.md  index.md
rrs_ros/movo_interface/movo_cpp/: CMakeLists.txt  README.md  package.xml
rrs_ros/movo_interface/movo_cpp/include/tr1cpp/: tr1.h
rrs_ros/movo_interface/movo_cpp/src/: .tr1.cpp.swp  i2c.cpp  joint.cpp  joint.cpp~  tr1.cpp  tr1.cpp~
rrs_ros/src/LMT/movo_hardware_interface/: package.xml
rrs_ros/src/LMT/movo_hardware_interface/config/: hardware.yaml
rrs_ros/src/LMT/movo_hardware_interface/launch/: movo_position_trajectory_controllers.launch
rrs_ros/src/LMT/movo_hardware_interface/src/: movo_hardware_interface.cpp
rrs_ros/src/LMT/movo_navigation/managment/: CMakeLists.txt
rrs_ros/src/LMT/movo_navigation/managment/launch/: hector_slamrec.launch~  slam_sim.launch
rrs_ros/src/LMT/movo_navigation/managment/maps/: moveconfig.txt  moveconfig.txt~  points.txt  sim.pgm  sim.yaml
rrs_ros/src/LMT/movo_navigation/managment/param/: global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
rrs_ros/src/LMT/movo_navigation/managment/rviz/: calib.rviz  full2.rviz  map_rec.rviz  move_rec.rviz  v2_map.rviz
rrs_ros/src/LMT/movo_navigation/managment/src/: managment.cpp
rrs_ros/src/LMT/movo_navigation/sepanta_msgs/: CMakeLists.txt  package.xml
rrs_ros/src/LMT/movo_navigation/sepanta_msgs/action/: avoidThat.action  avoidthataction.action  gesture.action  grip_emergency.action  grip_party.action  logic_grip.action  object.action  object_emergency.action  object_fetch.action  sepanta.action  slamaction.action
rrs_ros/src/LMT/movo_navigation/sepanta_msgs/msg/: Appearance.msg  BodyArray.msg  Expressions.msg  GestureDetect.msg  JointOrientationAndType.msg  JointPositionAndState.msg  NodeEvent.msg  ack_packages.msg  coordinate.msg  faceposition.msg  follow  irsensor.msg  joint.msg  lbm.msg  led.msg  motorfeedback.msg  motortorques.msg  nameobjects.msg  nodestatus.msg  nodestatuslist.msg  omnidata.msg  patterns_name.msg  position_cocktail.msg  ramp_pos.msg  upperbodymotors.msg  user.msg  users.msg  wave_hand.msg
rrs_ros/src/LMT/movo_navigation/sepanta_msgs/srv/: CreateModelNameSrv.srv  FaceDetectionSrv.srv  ListAvailable.srv  NodeAction.srv  ObjectFetchSrv.srv  RampPatternsID.srv  command.srv  down.srv  follow.srv  listnamemodels_Srv.srv  motorpid.srv  motortorque.srv  recordSrv.srv  setthreshSrv.srv  sound.srv  windows.srv
rrs_ros/src/core/: CMakeLists.txt  package.xml
rrs_ros/src/core/config/: config.yaml
rrs_ros/src/core/include/Net1/: network.hh
rrs_ros/src/core/include/Net2/: AsyncRunner.h  Enum.h  Helper.h  NTPClient.hh  Net2.h  Net2AsyncClient.h  Net2Base.h  Net2Client.h  Net2Consul.h  Net2Helper.h  Net2Publisher.h  Net2Service.h  Net2Subscirber.h  ProcessResult.h  Statics.h  TransmitedData.h
rrs_ros/src/core/launch/: rrs_consul.launch  rrs_hw (copy).launch  rrs_hw.launch  rrs_main.launch  rrs_main_cpd.launch  rrs_main_franka.launch  rrs_moveit.launch  rrs_ros.launch  rrs_ros_3.launch  rrs_ros_benchmark.launch  rrs_ros_benchmark2.launch
rrs_ros/src/core/reconfigure/: Param.cfg
rrs_ros/src/core/rviz/: benchmark.rviz  camera.rviz  main.rviz
rrs_ros/src/core/scripts/: consul.sh
rrs_ros/src/core/src/: movo_hardware.hh  rrs_cpd_node.cpp  rrs_net_test.cpp  rrs_net_test.hh  rrs_node.cpp  rrs_node_benchmark.cpp  rrs_ros.cpp  rrs_ros.hh  rrs_ros_benchmark.cpp  rrs_ros_benchmark.hh  rrs_ros_cpd.cpp  rrs_ros_cpd.hh
rrs_ros/src/core/src/Net1/: network.cpp
rrs_ros/src/core/src/Net2/Main/Base/: Net2.cpp  Net2Base.cpp  Net2Consul.cpp  Net2Helper.cpp  TransmitedData.cpp
rrs_ros/src/core/src/Net2/Main/Objects/: Net2AsyncClient.cpp  Net2Client.cpp  Net2Publisher.cpp  Net2Service.cpp  Net2Subscirber.cpp
rrs_ros/src/core/src/Net2/Manager/: net2_node.cpp  net2_ros.cpp  net2_ros.hh
rrs_ros/src/core/src/Net2/Share/: AsyncRunner.cpp  Enum.cpp  Helper.cpp  NTPClient.cpp  ProcessResult.cpp
rrs_ros/src/core/src/Net2/Test/: net2_test_node.cpp  net2_test_ros.cpp  net2_test_ros.hh
rrs_ros/src/lmt/lmt_navigation/lmt_msgs/: CMakeLists.txt  package.xml
rrs_ros/src/lmt/lmt_navigation/lmt_msgs/action/: LookForObjects.action  Master.action
rrs_ros/src/lmt/lmt_navigation/lmt_msgs/msg/: Audio.msg  Lean.msg  facepos.msg  forcedata.msg  log_Packages.msg  modelsName.msg  nearestfacepos.msg  nearestfacepose.msg
rrs_ros/src/lmt/lmt_navigation/lmt_msgs/srv/: CreateModel_continueSrv.srv  faceobstacleSrv.srv  grip.srv  maptools.srv  rampSrv.srv  stop.srv  stopsrv.srv  waveSrv.srv
rrs_ros/src/lmt/lmt_navigation/managment/: CMakeLists.txt  package.xml
rrs_ros/src/lmt/lmt_navigation/managment/launch/: planning.launch  slam_sim.launch  tf.launch
rrs_ros/src/lmt/lmt_navigation/managment/maps/: points.txt~
rrs_ros/src/lmt/lmt_navigation/managment/param/: base_local_planner_params.yaml
rrs_ros/src/lmt/lmt_navigation/managment/rviz/: full.rviz  rec.rviz
rrs_ros/src/lmt/lmt_navigation/managment/src/: managment.cpp  slam.cpp  slam_client.cpp
rrs_ros/src/lmt/lmt_navigation/move/: CMakeLists.txt  package.xml
rrs_ros/src/lmt/lmt_navigation/move/include/: lmt_movebase.h
rrs_ros/src/lmt/lmt_navigation/move/src/: client_movebase.cpp  lmt_movebase.cpp  lmt_movebase_node.cpp
rrs_ros/src/lmt/movo_hardware_interface/: CMakeLists.txt
rrs_ros/src/lmt/movo_hardware_interface/config/: torso_controller.yaml
rrs_ros/src/lmt/movo_hardware_interface/include/movo_hardware_interface/: movo_hardware.h
rrs_ros/src/lmt/movo_hardware_interface/src/: movo_hardware_interface_node.cpp
rrs_ros/src/lmt/movo_navigation/move/: package.xml
rrs_ros/src/lmt/movo_navigation/move/include/: sepantamovebase.h
rrs_ros/src/lmt/movo_navigation/move/src/: client_movebase.cpp  sepantamovebase_node.cpp
rrs_ros/src/lmt/nmpc/ros_ws/src/mpc/: CMakeLists.txt  package.xml
rrs_ros/src/lmt/nmpc/ros_ws/src/perception/: CMakeLists.txt  package.xml  point_cloud_server.cpp  (+1 more)
rrs_ros/src/lmt/teleoperation/movo_teleoperation/groundstation/: CMakeLists.txt  package.xml
rrs_ros/src/lmt/teleoperation/movo_teleoperation/joint_control/: CMakeLists.txt  package.xml
(+1851 files in other folders)
