<?xml version="1.0"?>
<package>
  <name>movo_hardware_interface</name>
  <version>1.0.0</version>
  <description>Provides the hardware definition and interfaces for Movo platform</description>

  <maintainer email="edwin.babaians@tum.de">Edwin Babaians</maintainer>

  <license>MIT</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository">/</url>

  <author email="edwin.babaians@tum.de">Edwin Babaians</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>movo_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>movocpp</build_depend>
 

  <run_depend>movo_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>movo_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>movocpp</run_depend>
  

</package>
