<?xml version="1.0"?>
<package>
  <name>lmt_msgs</name>
  <version>1.0.0</version>
  <description>The lmt_msgs package</description>

  <maintainer email="edwin.babaians@tum.de">thome</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 

  <export>
  </export>
</package>
