<package>
  <name>managment</name>
  <version>1.0.0</version>
  <description>node</description>

  <maintainer email="edwin.babaians@gmail.com">Edwin Babaians</maintainer>

  <license>TODO</license>

  <url type="website">http://sar.aut.ac.ir</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>lmt_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>dynamixel_msgs</run_depend> 
  <run_depend>lmt_msgs</run_depend> 
  
</package>
