<?xml version="1.0"?>
<package>
  <name>lmt_movebase</name>
  <version>1.0.0</version>
  <description>LMT TUM</description>

  <maintainer email="edwin.babaians@tum.de">edwin babaians</maintainer>

  <license>TODO</license>

  <url type="website">https://www.ei.tum.de/lmt/startseite/</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>lmt_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>dynamixel_msgs</run_depend> 
  <run_depend>lmt_msgs</run_depend> 
  
</package>
