<?xml version="1.0"?>
<package>
  <name>sepantamovebase</name>
  <version>0.0.2</version>
  <description>AUT @home Robot package - Base Odometry </description>

  <maintainer email="edwin.babaians@gmail.com">edwin babaians</maintainer>

  <license>TODO</license>

  <url type="website">sar.aut.ac.ir</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>sepanta_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>dynamixel_msgs</run_depend> 
  <run_depend>sepanta_msgs</run_depend> 
  
</package>
