<?xml version="1.0"?>
<package>
  <name>joint_control</name>
  <version>1.0.0</version>
  <description>Arm Joint Control Interface</description>

  <maintainer email="edwin.babaians@tum.de">edwin babaians</maintainer>

  <license>TODO</license>

  <url type="website">www.ei.tum.de/lmt</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>movo_msgs</build_depend>
  <build_depend>sepanta_msgs</build_depend>
  <build_depend>protobuf_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotiq_2f_gripper_control</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robotiq_2f_gripper_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sepanta_msgs</run_depend>
  <run_depend>protobuf_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>movo_msgs</run_depend>

</package>
