<?xml version="1.0"?>
<package format="2">
  <name>mpc</name>
  <version>0.1.0</version>
  <description>The test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="siqihu@todo.todo">siqihu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/test</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
     <depend>roscpp</depend>
     <depend>std_msg</depend>
     <depend>std_srvs</depend>
     <depend>tf2</depend>
     <depend>tf2_ros</depend>
     <depend>eigen_conversions</depend>
     <depend>perception_msgs</depend>
     <depend>kinova_msgs</depend>
     <depend>movo_msgs</depend>
 


     <build_depend>eigen</build_depend>
     <build_depend>moveit_core</build_depend>
     <build_depend>interactive_markers</build_depend>
     <build_depend>moveit_ros_planning_interface</build_depend>
     <build_depend>moveit_visual_tools</build_depend>
     <build_depend>sensor_msgs</build_depend>

     <exec_depend>j2s7s300_moveit_config </exec_depend>
     <exec_depend>moveit_core</exec_depend>
     <exec_depend>moveit_fake_controller_manager</exec_depend>
     <exec_depend>interactive_markers</exec_depend>
     <exec_depend>moveit_ros_planning_interface</exec_depend>
     <exec_depend>moveit_visual_tools</exec_depend>
  <!--   Note that this is equivalent to the following: -->
<!--     <build_depend>roscpp</build_depend>-->
<!--     <exec_depend>roscpp</exec_depend>-->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
