<package>
  <name>perception_mpc</name>
  <version>0.0.0</version>
  <description>Segment the plane using PointClouds</description>

  <author email="siqi.hu@tum.de">siqi</author>
  <maintainer email="siqi.hu@tum.de">siqi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>perception_msgs</build_depend>
<!--  <build_depend>pcl_conversions</build_depend>-->
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <!-- <build_depend>tf</build_depend> -->
  <build_depend>tf2_ros</build_depend>
<!--  <build_depend>octomap</build_depend>-->
<!--  <build_depend>libpcl-all-dev</build_depend>-->
<!--  <build_depend>tf</build_depend>-->



  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>perception_msgs</run_depend>
<!--  <run_depend>pcl_conversions</run_depend>-->
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <!-- <run_depend>tf</run_depend> -->
  <run_depend>tf2_ros</run_depend>
<!--  <run_depend>octomap</run_depend>-->
<!--  <run_depend>libpcl-all</run_depend>-->
<!--  <run_depend>tf</run_depend>-->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
