<?xml version="1.0"?>
<package>
  <name>perception_msgs</name>
  <version>0.0.1</version>
  <description>

   Messages needed for point cloud communication

  </description>
  <author email="siqi.hu@tum.de">siqi</author>
  <maintainer email="siqi.hu@tum.de">siqi</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
